--- a/css/latest.css
+++ b/css/latest.css
@@ -1,9 +1,40 @@
+header{
+	
+	background:-moz-linear-gradient(to right,rgb(100, 170, 29 ),rgb(200, 194, 11));
+	background:-webkit-linear-gradient(to right,rgb(100, 170, 29 ),rgb(200, 194, 11));
+	background:-o-linear-gradient(to right,rgb(100, 170, 29 ),rgb(200, 194, 11));
+	background:-ms-linear-gradient(to right,rgb(100, 170, 29 ),rgb(200, 194, 11)); 
+	/*background:linear-gradient(to right,rgb(31, 64, 55 ),rgb(153, 242, 200)); */
+	background:linear-gradient(to right,rgb(221, 246, 243 ),rgb(250, 172, 168)); 
+	background:linear-gradient(to right,rgb(221, 246, 243 ),rgb(250, 172, 168));
+	background:linear-gradient(to right,rgb(221, 246, 243 ),rgb(250, 172, 168));
+	background:linear-gradient(to right,rgb(221, 246, 243 ),rgb(250, 172, 168));
+	background:linear-gradient(to right,rgb(221, 246, 243 ),rgb(250, 172, 168));
+	background:linear-gradient(to right,rgb(221, 246, 243 ),rgb(250, 172, 168));
+	background:linear-gradient(to right,rgb(221, 246, 243 ),rgb(250, 172, 168));
+	background:linear-gradient(to right,rgb(221, 246, 243 ),rgb(250, 172, 168));
+	background:linear-gradient(to right,rgb(221, 246, 243 ),rgb(250, 172, 168));
+	background:linear-gradient(to right,rgb(195, 20, 50),rgb(36, 11, 54));
+
+}
+.myname{
+	
+	display:inline-block;
+}
 h1{
-	font-family: chewy;
+
+	color:white;
+	font-family: 'Josefin Sans';font-size: 36px;
+	font-weight: 900;
+	padding-top: 2%;
 }
-body{
-	background: rgb(193, 230, 238);
+.navcontainer{
+	color:blue;
+	display:inline-block;
+	float:right;
 }
+
+
 img{
-	width:10%;
+	width:30%;
 }
