--- a/css/latest.css
+++ b/css/latest.css
@@ -3,10 +3,36 @@ body{
 }
 
 /*Styling of the navigation bar and header*/
+header{
+	font-size: 0.8rem;
+}
+@media(min-width:450px){
+	header{
+		font-size:1rem;
+	}
+}
+
+@media (min-width: 650px){
+	header{
+		font-size:1.1rem;
+	}
+}
+@media (min-width: 870px){
+	header{
+		font-size:1.2rem;
+	}
+}
+@media (min-width: 1100px){
+	header{
+		font-size:1.4rem;
+	}
+}
 
 header{
 	
-	height:70px;
+	height:10vw;
+	min-height: 60px;
+	max-height: 77px;
 	background:-moz-linear-gradient(to right,rgb(195, 20, 50 ),rgb(36, 11, 54));
 	background:-webkit-linear-gradient(to right,rgb(195, 20, 50),rgb(36,11, 54));
 	background:-ms-linear-gradient(to right,rgb(195, 20, 50 ),rgb(36, 11, 54));
@@ -19,27 +45,30 @@ header{
 	padding:15px 5px 0px 5px ;
 	display:inline-block;
 	margin-left:3%;
+	vertical-align: center;
+	font-size:1em;
 }
 h1{
 
 	color:white;
 	font-family: 'Josefin Sans';
-	font-size: 42px;
-	font-weight: 900;
+	font-size:2.2em;
+	font-weight: 800;
 
 }
 .navcontainer{
-	background:-moz-linear-gradient(to right,rgb(195, 20, 50 ),rgb(36, 11, 54))!important;
-	background:-webkit-linear-gradient(to right,rgb(195, 20, 50),rgb(36,11, 54))!important;
-	background:-ms-linear-gradient(to right,rgb(195, 20, 50 ),rgb(36, 11, 54))!important;
+	
+	min-height: 60px;
+	
+	background:-moz-linear-gradient(to right,rgb(115.5, 15.5, 52),rgb(36, 11, 54));
+	background:-webkit-linear-gradient(to right,rgb(115.5, 15.5, 52),rgb(36,11, 54));
+	background:-ms-linear-gradient(to right,rgb(115.5, 15.5, 52 ),rgb(36, 11, 54));
 	/*background:linear-gradient(to right,rgb(31, 64, 55 ),rgb(153, 242, 200)); */
-	background:linear-gradient(to right,rgb(195, 20, 50),rgb(36, 11, 54))!important;
-	padding:12px 5px 0px 5px;
+	background:linear-gradient(to right,rgb(115.5, 15.5, 52),rgb(36, 11, 54));
+	padding:5px 5px 3px 5px;
 	display:inline-block;
 	float:right;
-}
-.navbar-nav{
-
+	
 }
 
 
@@ -62,8 +91,13 @@ padding-right: 5px !important;
 /*Styling The Intro Section*/
 
 .Intro{
-	padding: 12vh 5px 5px 5vw;
-	font-size: 1rem;
+	padding: 16vh 5px 5px 5vw;
+	font-size: 0.8rem;
+}
+@media(min-width:450px){
+	.Intro{
+		font-size:1rem;
+	}
 }
 @media (min-width: 650px){
 	.Intro{
@@ -83,22 +117,41 @@ padding-right: 5px !important;
 
 
 #mypic{
+	
+	margin:10px 3px 10px 3px;
+	width:48%;
+	float:left;
+}
+@media(min-width: 400px){
+	#mypic{
+		
 	padding-top: 15px;
 	width:48%;
 	float:left;
 	max-width: 500px;
-
+	}
+}
+@media(max-width:400px){
+	.Intro-text{
+		padding-top: 4vw;
+	}
 }
 .Intro-text{
 
-	height:48vw;
+	height:40vw;
 	max-height: 90vh;
 	text-align: center;
 	padding-top: 13vw;
 	line-height: 2em;
-	vertical-align: middle;
+	
 
 }
+@media(min-width: 500px){
+	.Intro-text{
+		height:48vw;
+	}
+}
+
 .Intro .littlespan{
 	
 	font-size: 1em;
@@ -115,6 +168,11 @@ padding-right: 5px !important;
 .twitter-follow-button{
 	margin-top:10px;
 }
+
+/*Intro Section style finished*/
+
+
+/*About Me section style begin*/
 
 
 
