--- a/css/latest.css
+++ b/css/latest.css
@@ -1,139 +1,56 @@
-body{
-}
-
 /*Styling of the navigation bar and header*/
 header{
-	font-size: 0.8rem;
-}
-@media(min-width:450px){
-	header{
-		font-size:1rem;
-	}
-}
+	height:70px;
+	background:-moz-linear-gradient(to right,rgb(100, 170, 29 ),rgb(200, 194, 11));
+	background:-webkit-linear-gradient(to right,rgb(100, 170, 29 ),rgb(200, 194, 11));
+	background:-o-linear-gradient(to right,rgb(100, 170, 29 ),rgb(200, 194, 11));
+	background:-ms-linear-gradient(to right,rgb(100, 170, 29 ),rgb(200, 194, 11));
+	/*background:linear-gradient(to right,rgb(31, 64, 55 ),rgb(153, 242, 200)); */
+	background:linear-gradient(to right,rgb(195, 20, 50),rgb(36, 11, 54));
 
-@media (min-width: 650px){
-	header{
-		font-size:1.1rem;
-	}
 }
-@media (min-width: 870px){
-	header{
-		font-size:1.2rem;
-	}
-}
-@media (min-width: 1100px){
-	header{
-		font-size:1.4rem;
-	}
-}
+.myname{
 
-header{
-
-	
-	height:10vw;
-	min-height: 60px;
-	max-height: 77px;
-	background:-moz-linear-gradient(to right,rgb(195, 20, 50 ),rgb(36, 11, 54));
-	background:-webkit-linear-gradient(to right,rgb(195, 20, 50),rgb(36,11, 54));
-	background:-ms-linear-gradient(to right,rgb(195, 20, 50 ),rgb(36, 11, 54));
-@@ -19,27 +45,30 @@ header{
 	padding:15px 5px 0px 5px ;
 	display:inline-block;
 	margin-left:3%;
-	vertical-align: center;
-	font-size:1em;
 }
 h1{
 
 	color:white;
 	font-family: 'Josefin Sans';
-	
-	font-size:2.2em;
-	font-weight: 800;
+	font-size: 42px;
+	font-weight: 900;
 
 }
 .navcontainer{
-	
-
-	min-height: 60px;
-
-	background:-moz-linear-gradient(to right,rgb(115.5, 15.5, 52),rgb(36, 11, 54));
-	background:-webkit-linear-gradient(to right,rgb(115.5, 15.5, 52),rgb(36,11, 54));
-	background:-ms-linear-gradient(to right,rgb(115.5, 15.5, 52 ),rgb(36, 11, 54));
-	/*background:linear-gradient(to right,rgb(31, 64, 55 ),rgb(153, 242, 200)); */
-	background:linear-gradient(to right,rgb(115.5, 15.5, 52),rgb(36, 11, 54));
-	padding:5px 5px 3px 5px;
+	background:linear-gradient(to right,rgb(112, 15, 52),rgb(36, 11, 54)) !important;
+	padding:12px 5px 0px 5px;
 	display:inline-block;
 	float:right;
 }
 
 
-
-
-/*Styling The Intro Section*/
-
-.Intro{
-	
-	padding: 16vh 5px 5px 5vw;
-	font-size: 0.8rem;
+.custom-toggler .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,102,203, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
-@media(min-width:450px){
-	.Intro{
-		font-size:1rem;
-	}
+
+.custom-toggler.navbar-toggler {
+  border-color: rgb(255,102,203);
 }
-@media (min-width: 650px){
-	.Intro{
+.nav-link {
+color: yellow !important;
+
+padding-left: 10px !important;
 padding-right: 5px !important;
-
 }
-#mypic{
+/*Styling of the header finished*/
 
-	margin:10px 3px 10px 3px;
-	width:48%;
-	float:left;
+
+
+
+
+
+img{
+	width:30%;
 }
-@media(min-width: 400px){
-	#mypic{
-
-	padding-top: 15px;
-	width:48%;
-	float:left;
-	max-width: 500px;
-
-	}
-}
-@media(max-width:400px){
-	.Intro-text{
-		padding-top: 4vw;
-	}
-}
-.Intro-text{
-
-	
-	height:40vw;
-	max-height: 90vh;
-	text-align: center;
-	padding-top: 13vw;
-	line-height: 2em;
-	
-
-
-}
-@media(min-width: 500px){
-	.Intro-text{
-		height:48vw;
-	}
-}
-
-.Intro .littlespan{
-
-	font-size: 1em;
-@@ -116,6 +169,11 @@ padding-right: 5px !important;
-	margin-top:10px;
-}
-
-/*Intro Section style finished*/
-
-
-/*About Me section style begin*/
