Enhanced the contact icons

--- a/css/latest.css
+++ b/css/latest.css
@@ -141,6 +141,13 @@ img{
 }
 .ContactList{
   list-style-type: none;
+  text-align: center;
+}
+.ContactList li{
+  display:inline-block;
+}
+.ConnectMessage{
+  text-align: center;
 }
 
 
