--- a/css/latest.css
+++ b/css/latest.css
@@ -151,6 +151,15 @@ img{
 .ContactIcons{
   font-size: 4em;
 }
+.fa-twitter-square{
+  color:#1DA1F2;
+}
+.fa-linkedin{
+  color:#2867B2;
+}
+.fa-envelope-square{
+  color:#3b5998;
+}
 
 
 
